[package]
name = "flavortown_reader"
version = "0.1.1"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "Read Flavortown Devlogs"
repository = "https://github.com/Dekoder-py/flavortown_reader"

[dependencies]
color-eyre = "0.6.5"
dotenv = "0.15.0"
pulldown-cmark = "0.13.3"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
